# OPP-Labs

OPPLab2/: CMakeLists.txt
OPPLab2-2/: CMakeLists.txt
OPPLab2-2/src/: Matrix.cpp  Matrix.h  Solution.h  main.cpp
OPPLab2/src/: FirstSolution.cpp  Solution.h  main.cpp
OPPlab1/: .gitignore  CMakeLists.txt
OPPlab1-2/: CMakeLists.txt  Matrix.h  Solution.h  main.cpp
OPPlab1/src/: FirstSolution.cpp  Matrix.cpp  SecondSolution.cpp  Solution.cpp  Solution.h  UsualSolution.cpp  main.cpp
OPPlab3/: CMakeLists.txt
OPPlab3/src/: main.c
OPPlab4/: CMakeLists.txt  main.cpp
OPPlab5/: CMakeLists.txt  main.cpp
Test/: main.cpp
lab3/: main.cpp
